// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pure Command action messages addTodoToList command 1`] = `
Object {
  "meta": Object {
    "filter": "filterName",
    "type": "COMMAND",
  },
  "payload": "responseData",
  "type": "ADD_TODO_TO_LIST",
}
`;

exports[`Pure Command action messages removeTodoFromList command 1`] = `
Object {
  "meta": Object {
    "filter": "filterName",
    "type": "COMMAND",
  },
  "payload": "responseData",
  "type": "REMOVE_TODO_FROM_LIST",
}
`;
